<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="64dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryLight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="true"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="200dp"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/text_field_background"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    />
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/text_field_background"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    />
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/account_sign_up"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/colorPrimaryLight"
                    android:textAllCaps="true"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"/>
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>